# GeoAI

./: .gitignore  README.md  debug.py  install.sh  main_flask_unext.py  manifest.txt  manifest1.txt  requirements.txt  test.py
UNext/: bbox.py  main_Unext_infer.py  main_Unext_infertest.py  requirements.txt  tester_infer.py  vectorize.py  vectorizeRM.py
UNext/networks/: RandLANet_UNext_inf.py
UNext/utils/: bbox_.py  data_prepare.py  helper_dp.py  helper_las.py  helper_ply.py  helper_tool.py  project_images_onto_pcd.py  project_images_onto_sphere.py
src/: convert_shp.py  debug.py  gui_kivy.py  gui_tk.py  main.py  main_flask.py  main_flask1.py  main_flask_unext.py  main_gui.py  test.py  upload_flask.py
src/UNext/: bbox.py  main_Unext_infer.py  requirements_main.txt  tester_infer.py  vectorize.py  vis_pred.py
src/app/: app.py
src/av_randlanet_scfnet/: RandLANet.py  SCFNet.py  compile_op.sh  data_prepare_orchard.py  data_prepare_toronto3d.py  install.sh  install_latest.sh  install_main.sh  install_sub.sh  log_train_Toronto3D3.txt  main_OrchardRoad.py  main_OrchardRoad_tf2.py  main_Toronto3D.py  predict_OrchardRoad.py  requirements.txt  requirements_main.txt  test.py  tester_OrchardRoad.py  tester_Toronto3D.py  vis_pred_OrchardRoad.py  vis_pred_bboxes_OrchardRoad.py  vis_pred_semseg_OrchardRoad.py
src/av_randlanet_scfnet/utils/nearest_neighbors/: CMakeLists.txt  setup.py
src/templates/: error.html  error2.html  main.html  (+5 more)
templates/: error.html  error2.html  file_upload_form1.html  login.html  main.html  success.html
test/: RMtest.py  localTest.py  vectTest.py
(+43 files in other folders)
